<resources>
    <string name="app_name">MDove的学习笔记</string>


    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="clickme">Click Me!</string>
    <string name="action_settings">Settings</string>
    <string name="add_friend">添加好友在这里哦</string>
    <string name="nearby">查看附近的人</string>
    <string name="title_activity_simple_guide_view">SimpleGuideViewActivity</string>
    <string name="title_activity_muti_guide_view">MutiGuideViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sub_title_separator">|</string>
    <string name="sub_title_format" formatted="false">%.1f km | %d kcal</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>

    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="svg_path">M460.8 486.4 486.4 486.4 486.4 460.8 486.4 243.2C486.4 108.884349 377.51565 0
243.2 0 108.884349 0 0 108.884349 0 243.2 0 377.51565 108.884349 486.4 243.2
486.4L460.8 486.4ZM51.2 243.2C51.2 137.161328 137.161328 51.2 243.2 51.2
349.238671 51.2 435.2 137.161328 435.2 243.2L435.2 460.8 460.8 435.2 243.2
435.2C137.161328 435.2 51.2 349.238671 51.2 243.2ZM460.8 588.8 435.2 563.2 435.2 780.8C435.2 886.838671 349.238671 972.8 243.2
972.8 137.161328 972.8 51.2 886.838671 51.2 780.8 51.2 674.761329 137.161328
588.8 243.2 588.8L460.8 588.8ZM0 780.8C0 915.11565 108.884349 1024 243.2 1024
377.51565 1024 486.4 915.11565 486.4 780.8L486.4 563.2 486.4 537.6 460.8 537.6
243.2 537.6C108.884349 537.6 0 646.48435 0 780.8ZM563.2 435.2 588.8 460.8 588.8 243.2C588.8 137.161328 674.761329 51.2 780.8 51.2
886.838671 51.2 972.8 137.161328 972.8 243.2 972.8 349.238671 886.838671 435.2
780.8 435.2L563.2 435.2ZM1024 243.2C1024 108.884349 915.11565 0 780.8 0
646.48435 0 537.6 108.884349 537.6 243.2L537.6 460.8 537.6 486.4 563.2 486.4
780.8 486.4C915.11565 486.4 1024 377.51565 1024 243.2ZM1024 780.8C1024 646.48435 915.11565 537.6 780.8 537.6L563.2 537.6 537.6 537.6
537.6 563.2 537.6 780.8C537.6 915.11565 646.48435 1024 780.8 1024 818.513163
1024 855.051123 1015.390662 888.179087 999.065099 900.861235 992.815296
906.075682 977.467919 899.825882 964.785773 893.576079 952.103625 878.228702
946.889178 865.546554 953.138978 839.420429 966.014014 810.620764 972.8 780.8
972.8 674.761329 972.8 588.8 886.838671 588.8 780.8L588.8 563.2 563.2 588.8
780.8 588.8C886.838671 588.8 972.8 674.761329 972.8 780.8 972.8 799.469549
970.142607 817.755731 964.968006 835.279443 960.963957 848.839106 968.71031
863.07731 982.269973 867.081361 995.829636 871.085412 1010.06784 863.339057
1014.071891 849.779394 1020.63305 827.560122 1024 804.391296 1024 780.8Z</string>
    <string name="card_string">Hahahahahahahahahahahahahahahaha...</string>

    <string name="text1">
\nThe library used in this demo is available on <a href="">Github</a>.
It was written by <b>Jerome DAVID</b>, an Android developer from UNCOPT LLC.
\nUNCOPT LLC is a small company based in Houston, TX and was funded in 2011 by two developers:
Jerome DAVID and Christophe CASADEBAIG. It specializes in Android development.
\nThe first app published by UNCOPT was <a href="market://details?id=com.uncopt.android.filebrowser.free">Duo: Holo File Manager w/ Root (DuoFM)</a>.
It\'s a file manager that focuses on security, but also on performance and ease of use. You can read more about it <a href="http://duofm.bitbucket.org">here</a>.
Plugins for this file manager are available (for free) and are distributed as separate applications.
\nThe second app published was a small developer tools called <a href="market://details?id=com.uncopt.android.charcodes">Character Codes</a>.
It\'s an app that conveniently displays character codes and entity name.
\n&#xab;&#x2009;DuoFM&#x2009;&#xbb; is available for free (with ads) and as a paid version,
while &#xab;&#x2009;Character&#xa0;Codes&#x2009;&#xbb; is only available as a paid app.
Since the release of those two apps, <a href="http://uncopt.com/android">new UNCOPT apps</a> have
been released completely free with no ads or tracking of any kind.
Instead, there\'s a <a href="market://details?id=com.uncopt.android.donations">Donation app</a> and
users can show their appreciation and help out by donating a little bit of money.
\n</string>

    <string name="text2">This is an example using a JustifiedEditText,
demonstrating that you can also justify the content of an editable EditText.</string>

    <string name="swipe">Swipe to\nreveal the\nEditText\nexample</string>

    <string name="title_section1">TextView Example</string>
    <string name="title_section2">EditText Example</string>
    <string name="_12306_12_10_2017_12306">今年抢火车票，你可能不必和 12306 那些满屏马赛克且难度爆棚的验证码斗智斗勇了。 12 月 10 日，2017 年春运方案出炉，内容主要涉及火车票预售期调整、春运时间，最重要的是，在 12306 网站购票时，近六成火车票不需要输入验证码了！</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">下拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">正在加载中</string>
    <string name="pull_to_refresh_header_last_time">最后更新时间 :</string>
    <string name="pull_to_refresh_no_more_data">已经到底啦</string>

    <string name="download_start">开始</string>
    <string name="download_pause">暂停</string>
    <string name="single">单线程下载</string>
    <string name="multith">多线程下载</string>

    <string name="drawer_title">Over-Scroll Demo App</string>
    <string name="drawer_subtitle">EverythingMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="append">Append</string>
    <string name="print">Print</string>
    <string name="show_logs_when_print_pressed">show logs when \'Print\' pressed</string>
    <string name="switch1">Switch</string>
    <string name="hint">\@同学</string>

    <string name="grid_view_demo_title">GridView Over-Scroll Demo</string>
    <string name="list_view_demo_title">ListView Over-Scroll Demo</string>
    <string name="recycler_view_demo_title">RecyclerView Over-Scroll Demo</string>
    <string name="recycler_view_staggered_grid_demo_title">RecyclerView St.Grid Over-Scroll Demo</string>
    <string name="scroll_view_demo_title">ScrollView Over-Scroll Demo</string>
    <string name="viewpager_demo_title">ViewPager Over-Scroll Demo</string>
    <string name="nested_scrollview_demo_title">NestedScrollView Over-Scroll Demo</string>
    <string name="misc_views_demo_title">Misc. Over-Scroll Demo</string>
    <string name="nested_scrollview_text">This text box is scrollable thanks to being situated inside a nested scroll view. That makes it scrollable regardless of the scrolling of the content of the entire screen, which can be scrolled independently.\nThe point here is to demonstrate how the over-scroll effect can work in the presence of nested scroll-views, provided it is applied over the parent (root) view, regardless of having inner nested scroll-views as children.\nIn this demo, the root view is merely a ScrollView, and therefore applying the effect over it is straightforward (i.e. using the OverScrollHelper).</string>

    <string name="horiz_drag_label">⇔ Drag Horizontally</string>
    <string name="vert_drag_label">⇳ Drag Vertically</string>


    <string name="title_activity_main">阿里开源ViewPager</string>
    <string-array name="indicator_style">
        <item>None</item>
        <item>Circle</item>
        <item>Icon</item>
        <item>Count</item>
    </string-array>
    <string-array name="indicator_gravity_hor">
        <item>Left</item>
        <item>Right</item>
        <item>Center</item>
    </string-array>
    <string-array name="indicator_gravity_ver">
        <item>Top</item>
        <item>Bottom</item>
        <item>Center</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>

    <string name="intro_message">
        <![CDATA[


            This sample shows how to use the Media Effects APIs that were introduced in Android 4.0.
            These APIs let you apply effects to image frames represented as OpenGL ES 2.0 textures.
            Image frames can be images loaded from disk, frames from the device\'s camera, or other
            video streams.


        ]]>
    </string>

    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>

    <string name="current_mplitude">Modify amplitude, current: %1$s</string>
    <string name="current_Disparity">Modify amplitude gap, current: %1$s</string>
    <string name="current_float_time">Modify movement speed, current: %1$s</string>
    <string name="current_rotate_time">Modify rotation speed, current: %1$s</string>
    <string name="delete_progress_btn_text">Clean up progress</string>
    <string name="increase_the_progress_btn_text">Increase the progress： </string>
    <string name="about_me">关于我</string>
    <string name="about_me_content">一个96后的双非Android彩笔，目前在一家创业公司做Android实习生，好好学习，天天向上。</string>

    <string name="toast_copy_success">复制完成</string>

    <string name="ycuwq_datepicker_cancel">Cancel</string>
    <string name="ycuwq_datepicker_decide">Decide</string>
    <string name="ycuwq_datepicker_hour">H</string>
    <string name="ycuwq_datepicker_minute">m</string>

    <string name="skid_activty_2_text">Do one thing at a time, and do well.Keep on going never give up.
        Whatever is worth doing is worth doing well.I can because i think i can.Jack of all trades and master of none.
    Whatever is worth doing is worth doing well.Keep on going never give up.</string>
</resources>
