<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="自定义Layout"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <Button
        android:id="@+id/btn_Time"
        android:layout_margin="10dp"
        android:text="@string/picker_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn_Options"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvTime"
        android:text="@string/picker_province"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_CustomTime"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvTime"
        android:text="@string/picker_custom_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_CustomOptions"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvTime"
        android:text="@string/picker_custom_province"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_no_linkage"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvTime"
        android:text="条件选择器(不联动)"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_GotoJsonData"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvTime"
        android:text="省市区Json文件解析示例"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>
