<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pull_to_refresh_header_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="4dp">

    <RelativeLayout
        android:id="@+id/pull_to_refresh_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/pull_to_refresh_header_hint_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pull_to_refresh_header_hint_normal"
            android:textColor="@color/pull_to_refresh_header_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pull_to_refresh_last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pull_to_refresh_header_hint_textview"
            android:layout_marginTop="6dp"
            android:text="@string/pull_to_refresh_header_last_time"
            android:textColor="@color/pull_to_refresh_header_text_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pull_to_refresh_header_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pull_to_refresh_header_hint_textview"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/pull_to_refresh_last_update_time_text"
            android:layout_toRightOf="@id/pull_to_refresh_last_update_time_text"
            android:minWidth="50dp"
            android:textColor="@color/pull_to_refresh_header_text_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/pull_to_refresh_header_arrow"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/pull_to_refresh_header_text"
        android:layout_toStartOf="@id/pull_to_refresh_header_text"
        android:contentDescription="@string/app_name"
        android:src="@drawable/xsearch_msg_pull_arrow_down" />

    <ProgressBar
        android:id="@+id/pull_to_refresh_header_progressbar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/pull_to_refresh_header_text"
        android:layout_toStartOf="@id/pull_to_refresh_header_text"
        android:gravity="center"
        android:indeterminateDrawable="@anim/update_loading_progressbar_anim"
        android:visibility="invisible" />
</RelativeLayout>
